# nanogpt

./: bigram.py  gpt-dev.ipynb  pyproject.toml
